--- a/gsplom.Rcheck/gsplom/DESCRIPTION
+++ b/gsplom.Rcheck/gsplom/DESCRIPTION
@@ -9,4 +9,5 @@ License: MIT + file LICENSE
 Depends: R (>= 2.14.0)
 Suggests: RUnit, BiocGenerics
 URL: https://github.com/andrewdyates/gsplom.rpackage
-Built: R 3.1.0; ; 2014-03-11 06:40:04 UTC; unix
+Packaged: 2014-03-11 23:39:14 UTC; z
+Built: R 3.1.0; ; 2014-03-11 23:39:23 UTC; unix
