--- a/gsplom.Rcheck/gsplom/DESCRIPTION
+++ b/gsplom.Rcheck/gsplom/DESCRIPTION
@@ -7,7 +7,7 @@ Maintainer: Andrew Yates <yates.115@osu.edu>
 Description: Glyph SPLOM is a data visualization and exploration tool like an enhanced correlation heatmap that can be used to infer directed networks from unordered, numeric data. It combines a non-linear measure of dependency strength, distance correlation, and a four-quadrant dependency class to quantify dependencies in an all-pairs dependency matrix. gsplom provides tools to efficiently compute, visualize, cluster, and analyze this matrix. 
 License: MIT + file LICENSE
 Depends: R (>= 2.14.0)
-Suggests: RUnit, BiocGenerics
+Suggests: RUnit, BiocGenerics, fastcluster
 URL: https://github.com/andrewdyates/gsplom.rpackage
-Packaged: 2014-03-11 23:39:14 UTC; z
-Built: R 3.1.0; ; 2014-03-11 23:39:23 UTC; unix
+Packaged: 2014-03-12 09:29:47 UTC; z
+Built: R 3.1.0; ; 2014-03-12 09:29:58 UTC; unix
