--- a/gsplom.Rcheck/00_pkg_src/gsplom/DESCRIPTION
+++ b/gsplom.Rcheck/00_pkg_src/gsplom/DESCRIPTION
@@ -5,8 +5,8 @@ Version: 0.99.0
 Author: Andrew D. Yates
 Maintainer: Andrew D. Yates <yates.115@osu.edu>
 Description: Glyph SPLOM is a data visualization and exploration tool like an enhanced correlation heatmap that can be used to infer directed networks from unordered, numeric data. It combines a non-linear measure of dependency strength, distance correlation, and a four-quadrant dependency class to quantify dependencies in an all-pairs dependency matrix. gsplom provides tools to efficiently compute, visualize, cluster, and analyze this matrix. 
-License: MIT + file LICENSE
+License: Artistic-2.0
 Depends: R (>= 2.14.0)
 Suggests: RUnit, BiocGenerics, fastcluster
 URL: https://github.com/andrewdyates/gsplom.rpackage
-Packaged: 2014-03-12 10:20:25 UTC; z
+Packaged: 2014-03-12 10:39:52 UTC; z
